# governor-generator

./: Cargo.toml  README.md  component.json  reference.json
component/: button.jsx
src/: governor_figma.rs  main.rs
